specs/kubernetes/request-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: userinfo-api-jwt-auth
  namespace: app-dev
spec:
  selector:
    matchLabels:
      app: userinfo-api
  jwtRules:
    - issuer: "http://keycloak-internal.sso-dev.svc.cluster.local/realms/dev"
      jwksUri: "http://keycloak-internal.sso-dev.svc.cluster.local:8080/realms/dev/protocol/openid-connect/certs"
      forwardOriginalToken: true
